fix(navbar): use max z-index

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,6 +6,7 @@
   
   font-size: 2rem;
   color: white;
+  z-index: 999;
 
   background-color: rgba($color: #000000, $alpha: 0.2);
 
